[tool.poetry]
package-mode = false
name = "tt-tools"
description = "An environment containing the python based tools for Tiny Tapeout"

[tool.poetry.dependencies]
python = "^3.9"
tt-support-tools = {git = "https://github.com/KoviRobi/tt-support-tools.git", rev = "package-nix"}
gds2gltf = {git = "https://github.com/KoviRobi/GDS2glTF", rev = "package-nix"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
